fix(tooltip): re-add truncate & fix snapshot tests
- lost truncate during the rewrite
- also added hover to a lot of the tests since the dom is updated on hover now

--- a/src/components/tooltip/tooltip.css
+++ b/src/components/tooltip/tooltip.css
@@ -54,3 +54,9 @@
   left: calc(-2 * var(--triangle-height));
   top: calc(50% - var(--triangle-height));
 }
+
+.truncate {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
